welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: not found: value num
		if(i<=nums.length-3 && nums(i+1)==nums(i)+5 && (num(i)-1<=2) )
                                                                ^