welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = 
{
	for(i <- 0 to nums.length-1)
	{
		if(i<=nums.length-3 && nums(i+1)==nums(i)+5 && (num(i)-1<=2) )
			return true		
	}
	return false
}
